--- a/Car_shop_Stefirca/www/css/style.css
+++ b/Car_shop_Stefirca/www/css/style.css
@@ -1,5 +1,5 @@
 ﻿body{
-    background-color: lightcoral;
+    background-color:burlywood;
     padding: 30px;
 }
 h2, h5{
@@ -8,7 +8,7 @@ h2, h5{
 img {
     width: 150px;
     height: 150px;
-    border: 5px solid black;
+    border: 5px solid purple;
 }
 .veicolo{
     display: inline-block;
@@ -16,9 +16,9 @@ img {
     margin: 10px;
 }
 .titolo{
-    font-size: 14pt;
+    font-size: 16pt;
 }
 .didascalia{
-    font-size: 9pt;
-	border: 5px solid red;
+    font-size: 12pt;
+	border: 5px solid black;
 }
